# Lait

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: training_config.json
docs/: GENOME_TRAITS.md  LAIT_ADAPTER_CONSTRUCTION_WHITE_PAPER.md  LAIT_HF_PAPER.md  LAIT_SYSTEM_OVERVIEW.md  LAIT_WHITE_PAPER.md  MATHEMATICAL_FOUNDATION.md  README_LAIT_GRANITE.md  TRAINING_EXECUTION_ROUTE.md
examples/: prompts.json
mcp/: README.md  adapter.py  chat.py  server.py
models/: genome_traits.json
ollama/: Modelfile  README.md  build.bat  build.sh  chat.py  demo.py  server.py
src/: __init__.py  benchmark_model.py  build_adapter.py  compress_evolution.py  evolve_adapter.py  gpu_engine.py  lait_ollama_demo.py  lait_uncapped.py  retrain_1024.py  train_perfect.py  train_universal.py
tests/: lait_adapter_proof.hash  lait_adapter_proof.json  lait_ollama_demo_results.json  test_final_system.py  verify_adapter.py
